--- a/public/css/styleNewLetterDeroulant.css
+++ b/public/css/styleNewLetterDeroulant.css
@@ -140,8 +140,8 @@ form {
 
 form h2 {
   margin-bottom: 1em;
-  color: #000000;
-  font-size: 1.4em;
+  color: #082a9b;
+  font-size: 24px;
 }
 
 label {
