--- a/views/publicationArticle.ejs
+++ b/views/publicationArticle.ejs
@@ -47,7 +47,7 @@
 
   <main>
     <section class="BlocA">
-      <h2>Publicatier un article</h2>
+      <h2>Formulaire de publication d'article</h2>
       <form action="#" method="post" class="Article">
         <label for="titre">Titre de l'article</label>
         <input type="text" id="titre" name="titre" placeholder="Titre de l'article" required>
