--- a/views/newsletterPage.ejs
+++ b/views/newsletterPage.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="icon" href="images/Logo1.png">
     <link rel="stylesheet" href="/css/headerNav.css">
     <link rel="stylesheet" href="/css/styleNewLetterDeroulant.css">
     <link rel="stylesheet" href="/css/footer.css">
