--- a/views/adminArticle.ejs
+++ b/views/adminArticle.ejs
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Publication article</title>
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-     <link rel="stylesheet" href="/css/headerNav.css">
-     <link rel="stylesheet" href="/css/adminArticle.css">
-    <link rel="stylesheet" href="/css/footer.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title><%= title %></title>
+  <link rel="stylesheet" href="css/publicationArticle.css" />
+  <link rel="icon" href="images/Logo1.png">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/css/headerNav.css">
+  <link rel="stylesheet" href="/css/footer.css">
 
 </head>
 <body>
