--- a/views/partials/nav-bar.ejs
+++ b/views/partials/nav-bar.ejs
@@ -4,7 +4,7 @@
         <a href="/adminUserGestion" aria-label="Gérer les utilisateurs">Gestion utilisateurs</a>
         <a href="/creeAtelier" aria-label="Créer un nouvel atelier">Création d'atelier</a>
         <a href="/adminModifAtelier" aria-label="Modifier un atelier">Modifier un atelier</a>
-        <a href="/PublicationArticle" aria-label="Publication d'article ">Publication d'article</a>
+        <a href="/adminArticle" aria-label="Publication d'article ">Publication d'article</a>
         <a href="/newsletterPage" aria-label="Envoyer la newsletter">Envoyer newsletter</a>
         <a href="/" aria-label="Voir le tableau de bord">Tableau de bord</a>
     </nav>
