--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,9 @@
 <header>
     <div class="header-container">
         <div class="header-title">
+           <a href="/">
             <img src="/images/Logo1.png" class="logo" alt="L'image représente une icône stylisée d'un ordinateur portable avec une grande flèche de curseur affichée sur l'écran sur fond bleu clair">
+            </a>
             <h1><%= title %></h1>
         </div>
         <div class="header-buttons" role="group" aria-label="Actions principales">
