zone upload fichier article terminé

--- a/views/adminArticle.ejs
+++ b/views/adminArticle.ejs
@@ -35,7 +35,7 @@
           <img src="https://cdn-icons-png.flaticon.com/512/1828/1828911.png" alt="upload icon">
           <a href="#" onclick="document.getElementById('fichier').click(); return false;">Choisis un fichier</a>
         </label>
-
+        <input type="file" id="fichier" name="fichier" style="display:none;">
         <button type="submit" class="bouton">Publier</button>
       </form>
     </section>
