Correction bug recherche adminAtelierGestion

--- a/views/adminAtelierGestion.ejs
+++ b/views/adminAtelierGestion.ejs
@@ -21,8 +21,8 @@
             <div class="ensembleRecherche">
                 <div class="rechercherPar">Rechercher </div>
                 <input type="text" id="recherche" placeholder="par titre...">
-                <input type="text" id="recherche2" placeholder="par date...">
-                <input type="text" id="recherche3" placeholder="par lieu...">
+                <input type="text" id="recherche" placeholder="par date...">
+                <input type="text" id="recherche" placeholder="par lieu...">
                 <img class="loupe" src="/images/loupe.png" alt="Image d'une loupe">
             </div>
         </div>
