--- a/views/adminAtelierGestion.ejs
+++ b/views/adminAtelierGestion.ejs
@@ -20,9 +20,9 @@
         <div class="enteteAtelier">
             <div class="ensembleRecherche">
                 <div class="rechercherPar">Rechercher </div>
-                <input type="text" id="recherche" placeholder="par titre...">
-                <input type="text" id="recherche" placeholder="par date...">
-                <input type="text" id="recherche" placeholder="par lieu...">
+                <input type="text" id="rechercheTitre" placeholder="par titre...">
+                <input type="text" id="rechercheDate" placeholder="par date...">
+                <input type="text" id="rechercheLieu" placeholder="par lieu...">
                 <img class="loupe" src="/images/loupe.png" alt="Image d'une loupe">
             </div>
         </div>
