--- a/views/adminAtelierGestion.ejs
+++ b/views/adminAtelierGestion.ejs
@@ -34,7 +34,7 @@
                     <div class="dataContainer">
                         <div class="dataAtelier">Titre : Atelier de cuisine</div>
                         <div class="dataAtelier">Date et lieu : 15/02/2025 - Salle A</div>
-                        <div class="dataAtelier">Description : Un atelier pour apprendre les bases de la cuisine</div>
+                        <div class="dataAtelier">Description :</div>
                     </div>
                 </div>
                 <div class="boutonsActions">
@@ -50,7 +50,7 @@
                     <div class="dataContainer">
                         <div class="dataAtelier">Titre : Atelier de peinture</div>
                         <div class="dataAtelier">Date et lieu : 20/02/2025 - Salle B</div>
-                        <div class="dataAtelier">Description : Découvrez les techniques de peinture à l'huile</div>
+                        <div class="dataAtelier"></div>
                     </div>
                 </div>
                 <div class="boutonsActions">
@@ -117,10 +117,8 @@
                 <div id="image-help" class="sr-only">Sélectionnez une image au format JPG, PNG ou GIF</div>
                 
                 <label for="description">Description :</label>
-                <textarea id="description" name="description" aria-required="true" aria-describedby="description-error description-help"></textarea>
-                <div id="description-help">
-                    Rédigez la description de l'atelier ici
-                </div>
+                <textarea id="description" name="description" aria-required="true" aria-describedby="description-error description-help">Rédigez la description de l'atelier ici</textarea>
+                
                 <div id="description-error" role="alert" aria-live="polite"></div>
                 
                 <label for="places">Nombre de place :</label>
