--- a/public/css/adminAtelierGestion.css
+++ b/public/css/adminAtelierGestion.css
@@ -247,7 +247,7 @@ header img {
     grid-column: 1;
   }
 
-  .dataContainer {
+  #dataContainer {
     grid-row: 1 / 3; /* Titre et date occupent les 2 premières rangées */
     grid-column: 2;
     display: flex;
@@ -255,7 +255,8 @@ header img {
     gap: 10px;
   }
 
-  .description {
+  #description {
+    resize: vertical;
     grid-row: 3; /* Description sur la 3ème rangée */
     grid-column: 2; /* Reste dans la colonne de droite */
     margin-top: 10px;
